--- a/check_all_solution_v_guesses.ipynb
+++ b/check_all_solution_v_guesses.ipynb
@@ -36141,7 +36141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36157,7 +36157,7 @@
     {
      "data": {
       "text/plain": [
-       "[0, 1, 2, 3]"
+       "[0, 1, 2, 3, 4, 5, 6, 7]"
       ]
      },
      "execution_count": 46,
@@ -36166,9 +36166,7 @@
     }
    ],
    "source": [
-    "rc.ids\n",
-    "\n",
-    "[0, 1, 2, 3]\n"
+    "rc.ids"
    ]
   },
   {
@@ -36179,7 +36177,7 @@
     {
      "data": {
       "text/plain": [
-       "[stdout:2] Process 2241143.\n"
+       "[stdout:0] Process 2256901.\n"
       ]
      },
      "metadata": {},
@@ -36188,7 +36186,7 @@
     {
      "data": {
       "text/plain": [
-       "[stdout:0] Process 2241139.\n"
+       "[stdout:1] Process 2256903.\n"
       ]
      },
      "metadata": {},
@@ -36197,7 +36195,7 @@
     {
      "data": {
       "text/plain": [
-       "[stdout:1] Process 2241141.\n"
+       "[stdout:7] Process 2256970.\n"
       ]
      },
      "metadata": {},
@@ -36206,7 +36204,43 @@
     {
      "data": {
       "text/plain": [
-       "[stdout:3] Process 2241149.\n"
+       "[stdout:5] Process 2256938.\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[stdout:2] Process 2256905.\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[stdout:6] Process 2256954.\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[stdout:3] Process 2256911.\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[stdout:4] Process 2256926.\n"
       ]
      },
      "metadata": {},
@@ -36221,7 +36255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
