--- a/web_hand.ipynb
+++ b/web_hand.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 193,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 194,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 195,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 196,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,16 +41,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 199,
    "metadata": {},
    "outputs": [],
    "source": [
-    "app = elem.find_element(By.CSS_SELECTOR, 'body > game-app:nth-child(4)')"
+    "elem.click()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 205,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "guess = 'strip'\n",
+    "elem.send_keys(guess + Keys.RETURN)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 200,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "elem = browser.find_element(By.CLASS_NAME, 'nightmode')\n",
+    "shadowRoot = browser.execute_script(\"return arguments[0].shadowRoot\", elem)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 201,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,30 +83,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "<div id=\"board\" style=\"width: 192px; height: 228px;\"><game-row letters=\"strip\" length=\"5\"></game-row><game-row length=\"5\" letters=\"ouija\"></game-row><game-row letters=\"frown\" length=\"5\"></game-row><game-row letters=\"\" length=\"5\"></game-row><game-row letters=\"\" length=\"5\"></game-row><game-row letters=\"\" length=\"5\"></game-row></div>"
+    "qry_script = \"\"\"return document.querySelector('game-app').shadowRoot.querySelector('game-row').shadowRoot.querySelectorAll('game-tile')\"\"\""
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "<game-row length=\"5\" letters=\"ouija\"></game-row>"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "<game-row letters=\"strip\" length=\"5\"></game-row>"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,49 +97,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<selenium.webdriver.remote.webelement.WebElement (session=\"df4b0a3b-03a1-4939-b101-39cf2c9cb013\", element=\"4e86298e-ebf0-4047-8572-9b62faf2209a\")>\n",
-      "<game-row letters=\"strip\" length=\"5\"></game-row>\n",
-      "<selenium.webdriver.remote.webelement.WebElement (session=\"df4b0a3b-03a1-4939-b101-39cf2c9cb013\", element=\"6e36e13a-b04e-4d60-a580-266ad81fc50b\")>\n",
-      "<game-row length=\"5\" letters=\"ouija\"></game-row>\n",
-      "<selenium.webdriver.remote.webelement.WebElement (session=\"df4b0a3b-03a1-4939-b101-39cf2c9cb013\", element=\"c31d5d5f-3844-44b2-8296-89ec7e009e85\")>\n",
-      "<game-row letters=\"frown\" length=\"5\"></game-row>\n",
-      "<selenium.webdriver.remote.webelement.WebElement (session=\"df4b0a3b-03a1-4939-b101-39cf2c9cb013\", element=\"ae334fa5-6a08-4b62-98fb-0e42a737dec5\")>\n",
-      "<game-row letters=\"\" length=\"5\"></game-row>\n",
-      "<selenium.webdriver.remote.webelement.WebElement (session=\"df4b0a3b-03a1-4939-b101-39cf2c9cb013\", element=\"12e7308e-7540-40a9-b664-c31eca64950d\")>\n",
-      "<game-row letters=\"\" length=\"5\"></game-row>\n",
-      "<selenium.webdriver.remote.webelement.WebElement (session=\"df4b0a3b-03a1-4939-b101-39cf2c9cb013\", element=\"a0970900-dbc7-429d-b496-cad2382eedf3\")>\n",
-      "<game-row letters=\"\" length=\"5\"></game-row>\n"
-     ]
-    }
-   ],
+   "outputs": [],
+   "source": [
+    "qry_r = browser.execute_script(qry_script)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "qry_r[0].get_attribute(\"outerHTML\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "for my_elem in browser.execute_script(qry_script):\n",
-    "    print(my_elem)\n",
-    "    texts = my_elem.get_attribute(\"outerHTML\")\n",
-    "    print(texts)"
+    "    # print(my_elem)\n",
+    "    out_texts = my_elem.get_attribute(\"outerHTML\")\n",
+    "\n",
+    "    print(out_texts)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 206,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<game-tile letter=\"s\" evaluation=\"absent\" reveal=\"\"></game-tile>\n",
-      "<game-tile letter=\"t\" evaluation=\"absent\" reveal=\"\"></game-tile>\n",
       "<game-tile letter=\"r\" evaluation=\"absent\" reveal=\"\"></game-tile>\n",
-      "<game-tile letter=\"i\" evaluation=\"absent\" reveal=\"\"></game-tile>\n",
-      "<game-tile letter=\"p\" evaluation=\"absent\" reveal=\"\"></game-tile>\n"
+      "<game-tile letter=\"o\" evaluation=\"correct\" reveal=\"\"></game-tile>\n",
+      "<game-tile letter=\"a\" evaluation=\"absent\" reveal=\"\"></game-tile>\n",
+      "<game-tile letter=\"t\" evaluation=\"absent\" reveal=\"\"></game-tile>\n",
+      "<game-tile letter=\"e\" evaluation=\"absent\" reveal=\"\"></game-tile>\n"
      ]
     }
    ],
@@ -149,21 +158,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<game-tile letter=\"s\" evaluation=\"absent\" reveal=\"\"></game-tile>\n",
-      "<game-tile letter=\"t\" evaluation=\"absent\" reveal=\"\"></game-tile>\n",
-      "<game-tile letter=\"r\" evaluation=\"absent\" reveal=\"\"></game-tile>\n",
-      "<game-tile letter=\"i\" evaluation=\"absent\" reveal=\"\"></game-tile>\n",
-      "<game-tile letter=\"p\" evaluation=\"absent\" reveal=\"\"></game-tile>\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "inner_texts = [my_elem.get_attribute(\"outerHTML\") for my_elem in browser.execute_script(qry_script)]\n",
     "for inner_text in inner_texts:\n",
@@ -172,40 +169,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<selenium.webdriver.remote.webelement.WebElement (session=\"df4b0a3b-03a1-4939-b101-39cf2c9cb013\", element=\"7de7ee16-c241-4472-8569-c57f556315e4\")>"
-      ]
-     },
-     "execution_count": 39,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "app"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<bound method WebElement.get_attribute of <selenium.webdriver.remote.webelement.WebElement (session=\"df4b0a3b-03a1-4939-b101-39cf2c9cb013\", element=\"7de7ee16-c241-4472-8569-c57f556315e4\")>>"
-      ]
-     },
-     "execution_count": 24,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "items = elem.find_elements(By.PARTIAL_LINK_TEXT, 'q')\n",
     "for item in items:\n",
@@ -215,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -224,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -233,16 +208,6 @@
     "for item in items:\n",
     "    text = item.text\n",
     "    print (text)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "guess = 'strip'\n",
-    "elem.send_keys('guess' + Keys.RETURN)"
    ]
   },
   {
