--- a/web_hand.ipynb
+++ b/web_hand.ipynb
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 201,
+   "execution_count": 217,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,16 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "qry_script = \"\"\"return document.querySelector('game-app').shadowRoot.querySelector('game-row').shadowRoot.querySelectorAll('game-tile')\"\"\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 221,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 222,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,25 +97,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 223,
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<selenium.webdriver.remote.webelement.WebElement (session=\"62bf6888-f3da-4e63-bc31-2fbd71889214\", element=\"2aaacda7-7bb9-4fe1-a6fe-d16610c4ed44\")>"
+      ]
+     },
+     "execution_count": 223,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "qry_r[0].get_attribute(\"outerHTML\")"
+    "qry_r[0]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 224,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<game-row length=\"5\" letters=\"roate\"></game-row>\n",
+      "<game-row letters=\"guess\" length=\"5\"></game-row>\n",
+      "<game-row letters=\"strip\" length=\"5\"></game-row>\n",
+      "<game-row letters=\"\" length=\"5\"></game-row>\n",
+      "<game-row letters=\"\" length=\"5\"></game-row>\n",
+      "<game-row letters=\"\" length=\"5\"></game-row>\n"
+     ]
+    }
+   ],
    "source": [
     "for my_elem in browser.execute_script(qry_script):\n",
     "    # print(my_elem)\n",
@@ -135,18 +143,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 206,
+   "execution_count": 225,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<game-tile letter=\"r\" evaluation=\"absent\" reveal=\"\"></game-tile>\n",
-      "<game-tile letter=\"o\" evaluation=\"correct\" reveal=\"\"></game-tile>\n",
-      "<game-tile letter=\"a\" evaluation=\"absent\" reveal=\"\"></game-tile>\n",
-      "<game-tile letter=\"t\" evaluation=\"absent\" reveal=\"\"></game-tile>\n",
-      "<game-tile letter=\"e\" evaluation=\"absent\" reveal=\"\"></game-tile>\n"
+      "<game-row length=\"5\" letters=\"roate\"></game-row>\n",
+      "<game-row letters=\"guess\" length=\"5\"></game-row>\n",
+      "<game-row letters=\"strip\" length=\"5\"></game-row>\n",
+      "<game-row letters=\"\" length=\"5\"></game-row>\n",
+      "<game-row letters=\"\" length=\"5\"></game-row>\n",
+      "<game-row letters=\"\" length=\"5\"></game-row>\n"
      ]
     }
    ],
@@ -155,67 +164,6 @@
     "for inner_text in inner_texts:\n",
     "    print(inner_text)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "inner_texts = [my_elem.get_attribute(\"outerHTML\") for my_elem in browser.execute_script(qry_script)]\n",
-    "for inner_text in inner_texts:\n",
-    "    print(inner_text)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "app"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "items = elem.find_elements(By.PARTIAL_LINK_TEXT, 'q')\n",
-    "for item in items:\n",
-    "    text = item.text\n",
-    "    print (text)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "elem.click()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# items = browser.find_elements(By.ID, 'game')\n",
-    "items = elem.find_elements(By.PARTIAL_LINK_TEXT, 'q')\n",
-    "for item in items:\n",
-    "    text = item.text\n",
-    "    print (text)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
