adding web_hand_2
trying a different approach to reading the site with SeleniumBase instead of Selenium

--- a/web_hand.ipynb
+++ b/web_hand.ipynb
@@ -173,6 +173,24 @@
    "source": [
     "browser.quit()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "/game-theme-manager/div/div[1]/div/game-row[2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "/game-theme-manager/div/div[1]/div/game-row[1]"
+   ]
   }
  ],
  "metadata": {
