--- a/web_hand.ipynb
+++ b/web_hand.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 272,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 273,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 274,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,11 +34,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 275,
    "metadata": {},
    "outputs": [],
    "source": [
     "elem = browser.find_element(By.CLASS_NAME, 'nightmode')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 276,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "elem.click()"
    ]
   },
   {
@@ -54,118 +63,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 233,
+   "execution_count": 277,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "qry_script = \"\"\"return document.querySelector('game-app').shadowRoot.querySelectorAll('game-row')[5].shadowRoot.querySelectorAll('game-tile[letter]')\"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 278,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "qry_r = browser.execute_script(qry_script)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 262,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<selenium.webdriver.remote.webelement.WebElement (session=\"7a8294b8-ade0-433a-8484-d438ac0b710f\", element=\"10fdbf87-26e4-496e-8ba1-4db396a864ef\")>,\n",
-       " <selenium.webdriver.remote.webelement.WebElement (session=\"7a8294b8-ade0-433a-8484-d438ac0b710f\", element=\"f0ebb9c6-152c-4c7f-b6fa-d4ee45983bed\")>,\n",
-       " <selenium.webdriver.remote.webelement.WebElement (session=\"7a8294b8-ade0-433a-8484-d438ac0b710f\", element=\"b8122027-ccd2-4e9b-97ec-b57a7d3e366c\")>,\n",
-       " <selenium.webdriver.remote.webelement.WebElement (session=\"7a8294b8-ade0-433a-8484-d438ac0b710f\", element=\"f671b576-7e35-46f1-b9a5-9d54a827ca5e\")>,\n",
-       " <selenium.webdriver.remote.webelement.WebElement (session=\"7a8294b8-ade0-433a-8484-d438ac0b710f\", element=\"efcb6957-8961-4646-8d08-1e0f63f2ba94\")>,\n",
-       " <selenium.webdriver.remote.webelement.WebElement (session=\"7a8294b8-ade0-433a-8484-d438ac0b710f\", element=\"59b27b1d-4382-4c3c-b869-a40ef276b9c2\")>,\n",
-       " <selenium.webdriver.remote.webelement.WebElement (session=\"7a8294b8-ade0-433a-8484-d438ac0b710f\", element=\"e32f7e06-4087-45d0-b73e-1bf100bb0d0f\")>,\n",
-       " <selenium.webdriver.remote.webelement.WebElement (session=\"7a8294b8-ade0-433a-8484-d438ac0b710f\", element=\"e87fcf33-b543-4444-bd5d-6ff0dee8e800\")>,\n",
-       " <selenium.webdriver.remote.webelement.WebElement (session=\"7a8294b8-ade0-433a-8484-d438ac0b710f\", element=\"45a5311d-3fe2-4012-8779-9861421e409c\")>,\n",
-       " <selenium.webdriver.remote.webelement.WebElement (session=\"7a8294b8-ade0-433a-8484-d438ac0b710f\", element=\"0e4d22d2-3836-4741-be3c-2ae5c308c6b5\")>,\n",
-       " <selenium.webdriver.remote.webelement.WebElement (session=\"7a8294b8-ade0-433a-8484-d438ac0b710f\", element=\"b1ce4c28-d007-44be-8906-1eecb8eb03d3\")>,\n",
-       " <selenium.webdriver.remote.webelement.WebElement (session=\"7a8294b8-ade0-433a-8484-d438ac0b710f\", element=\"f6f3afe9-94b0-48ae-9778-247a266890c9\")>,\n",
-       " <selenium.webdriver.remote.webelement.WebElement (session=\"7a8294b8-ade0-433a-8484-d438ac0b710f\", element=\"ab1f22a3-6297-458c-850d-aa51ce700381\")>,\n",
-       " <selenium.webdriver.remote.webelement.WebElement (session=\"7a8294b8-ade0-433a-8484-d438ac0b710f\", element=\"8f467f0d-be7f-48a5-ac8f-ad776061dc37\")>,\n",
-       " <selenium.webdriver.remote.webelement.WebElement (session=\"7a8294b8-ade0-433a-8484-d438ac0b710f\", element=\"9a6691de-828f-4b50-8844-ee237be84b25\")>,\n",
-       " <selenium.webdriver.remote.webelement.WebElement (session=\"7a8294b8-ade0-433a-8484-d438ac0b710f\", element=\"12d61d5d-00ff-4ec8-96a2-37edaac914ea\")>,\n",
-       " <selenium.webdriver.remote.webelement.WebElement (session=\"7a8294b8-ade0-433a-8484-d438ac0b710f\", element=\"0302fe14-5ead-400c-aa02-90593f3a56dc\")>,\n",
-       " <selenium.webdriver.remote.webelement.WebElement (session=\"7a8294b8-ade0-433a-8484-d438ac0b710f\", element=\"afd213ae-ae8e-414e-a793-fcd5890e19bd\")>,\n",
-       " <selenium.webdriver.remote.webelement.WebElement (session=\"7a8294b8-ade0-433a-8484-d438ac0b710f\", element=\"20a2cdd7-0e5b-4eb4-877e-dec0ce6fc394\")>,\n",
-       " <selenium.webdriver.remote.webelement.WebElement (session=\"7a8294b8-ade0-433a-8484-d438ac0b710f\", element=\"79594cbd-15c8-448f-a44a-92cc487903e0\")>,\n",
-       " <selenium.webdriver.remote.webelement.WebElement (session=\"7a8294b8-ade0-433a-8484-d438ac0b710f\", element=\"106a2c2c-ea0a-4816-99df-92069c492db1\")>,\n",
-       " <selenium.webdriver.remote.webelement.WebElement (session=\"7a8294b8-ade0-433a-8484-d438ac0b710f\", element=\"6de5f258-2767-4fa4-a0e1-7693504edb79\")>,\n",
-       " <selenium.webdriver.remote.webelement.WebElement (session=\"7a8294b8-ade0-433a-8484-d438ac0b710f\", element=\"e0ac794f-8e43-4b36-87b1-8bac69100c33\")>,\n",
-       " <selenium.webdriver.remote.webelement.WebElement (session=\"7a8294b8-ade0-433a-8484-d438ac0b710f\", element=\"1fe7f8b0-9758-4485-ad3d-63f5eb601c04\")>,\n",
-       " <selenium.webdriver.remote.webelement.WebElement (session=\"7a8294b8-ade0-433a-8484-d438ac0b710f\", element=\"6fefbad3-193b-46a7-b050-247c411db64d\")>,\n",
-       " <selenium.webdriver.remote.webelement.WebElement (session=\"7a8294b8-ade0-433a-8484-d438ac0b710f\", element=\"e2f063f2-6edb-4611-bcf0-dd4efa875b3f\")>,\n",
-       " <selenium.webdriver.remote.webelement.WebElement (session=\"7a8294b8-ade0-433a-8484-d438ac0b710f\", element=\"84f60572-5060-4b00-bf14-c1e9225b1f9d\")>,\n",
-       " <selenium.webdriver.remote.webelement.WebElement (session=\"7a8294b8-ade0-433a-8484-d438ac0b710f\", element=\"e4adf15c-7b6a-4de8-aaeb-3c257a48dc5f\")>]"
+       "'<button data-key=\"n\" data-state=\"present\" class=\"\">n</button>'"
       ]
      },
-     "execution_count": 233,
+     "execution_count": 262,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "html_source_code"
+    "html_source_code[25].get_attribute(\"outerHTML\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 235,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'<button data-key=\"q\">q</button>'"
-      ]
-     },
-     "execution_count": 235,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "html_source_code[0].get_attribute(\"outerHTML\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 263,
    "metadata": {},
    "outputs": [],
    "source": [
     "# need to slow down here"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 67,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "elem.click()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 69,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "start = req_text.find(\"<game-tile\") + len(\"<game-tile\")\n",
-    "end = req_text.find(\"<game-tile\", start) + 1\n",
-    "word_string = req_text[start:end]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 70,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "' letter=\"w\" evaluation=\"correct\" reveal></game-tile>\\\\n            <'"
-      ]
-     },
-     "execution_count": 70,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "word_string"
    ]
   },
   {
@@ -180,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 238,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -190,59 +130,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 239,
    "metadata": {},
    "outputs": [],
    "source": [
-    "qry_script = \"\"\"return document.querySelector('game-app').shadowRoot.querySelector('game-row').shadowRoot.querySelectorAll('game-tile[letter]')\"\"\""
+    "shadowRoot"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 256,
    "metadata": {},
    "outputs": [],
    "source": [
-    "qry_r = browser.execute_script(qry_script)"
+    "qry_script = \"\"\"return document.querySelector('game-app').shadowRoot.querySelectorAll('game-row')[2].shadowRoot.querySelectorAll('game-tile[letter]')\"\"\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 267,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "<selenium.webdriver.remote.webelement.WebElement (session=\"e23af958-3211-4205-af2d-a9bbb622e9e8\", element=\"0d9c8d05-0875-40b6-bb81-4a985b7d4058\")>"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "qry_r[0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<game-tile letter=\"s\" evaluation=\"absent\" reveal=\"\"></game-tile>\n",
-      "<game-tile letter=\"t\" evaluation=\"absent\" reveal=\"\"></game-tile>\n",
-      "<game-tile letter=\"r\" evaluation=\"present\" reveal=\"\"></game-tile>\n",
-      "<game-tile letter=\"i\" evaluation=\"absent\" reveal=\"\"></game-tile>\n",
-      "<game-tile letter=\"p\" evaluation=\"absent\" reveal=\"\"></game-tile>\n"
+     "ename": "IndexError",
+     "evalue": "list index out of range",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m/tmp/ipykernel_853757/4052123598.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mqry_r\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_attribute\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"outerHTML\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mIndexError\u001b[0m: list index out of range"
      ]
     }
    ],
+   "source": [
+    "qry_r[0].get_attribute(\"outerHTML\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 268,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "for my_elem in browser.execute_script(qry_script):\n",
     "    # print(my_elem)\n",
@@ -253,22 +182,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 225,
+   "execution_count": 269,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<game-row length=\"5\" letters=\"roate\"></game-row>\n",
-      "<game-row letters=\"guess\" length=\"5\"></game-row>\n",
-      "<game-row letters=\"strip\" length=\"5\"></game-row>\n",
-      "<game-row letters=\"\" length=\"5\"></game-row>\n",
-      "<game-row letters=\"\" length=\"5\"></game-row>\n",
-      "<game-row letters=\"\" length=\"5\"></game-row>\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "inner_texts = [my_elem.get_attribute(\"outerHTML\") for my_elem in browser.execute_script(qry_script)]\n",
     "for inner_text in inner_texts:\n",
@@ -277,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 270,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -286,9 +202,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 271,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'game' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m/tmp/ipykernel_853757/1937951441.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mgame\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0mtheme\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0mmanager\u001b[0m\u001b[0;34m/\u001b[0m\u001b[0mdiv\u001b[0m\u001b[0;34m/\u001b[0m\u001b[0mdiv\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m/\u001b[0m\u001b[0mdiv\u001b[0m\u001b[0;34m/\u001b[0m\u001b[0mgame\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0mrow\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'game' is not defined"
+     ]
+    }
+   ],
    "source": [
     "/game-theme-manager/div/div[1]/div/game-row[2]"
    ]
